[gd_scene load_steps=16 format=4 uid="uid://dg8gocr5heum6"]

[ext_resource type="Texture2D" uid="uid://cya60de6o6xii" path="res://assets/textures/background gradient.png" id="1_ne1pe"]
[ext_resource type="Texture2D" uid="uid://cuwsi04wl54v1" path="res://assets/textures/Tiles/background tileset.png" id="2_krnh2"]
[ext_resource type="Texture2D" uid="uid://n7drtpgegv31" path="res://assets/textures/Tiles/tileset.png" id="3_qkbe7"]
[ext_resource type="PackedScene" uid="uid://d0tuhvjn0w7fp" path="res://platform.tscn" id="4_5ggtx"]
[ext_resource type="PackedScene" uid="uid://bn7qsr3svv3vw" path="res://character.tscn" id="5_bgypc"]
[ext_resource type="Script" uid="uid://5762tk01p54b" path="res://tutorial.gd" id="6_jgi5q"]
[ext_resource type="FontFile" uid="uid://bdrm0wxjwuc65" path="res://assets/fonts/zig/zig_____.ttf" id="7_a8af5"]
[ext_resource type="PackedScene" uid="uid://ch3ltc6adf1yi" path="res://enemies/crab.tscn" id="8_48p0x"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vef74"]
texture = ExtResource("2_krnh2")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_hve3p"]
sources/0 = SubResource("TileSetAtlasSource_vef74")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ryrav"]
texture = ExtResource("3_qkbe7")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
4:0/0 = 0
4:1/0 = 0
4:2/0 = 0
3:2/0 = 0
3:1/0 = 0

[sub_resource type="TileSet" id="TileSet_eow3j"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_ryrav")

[sub_resource type="LabelSettings" id="LabelSettings_eow3j"]
font = ExtResource("7_a8af5")
font_size = 10

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ryrav"]
size = Vector2(37, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eow3j"]
size = Vector2(45.25, 16.5)

[node name="Game" type="Node2D"]
texture_filter = 1

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(640, 1000)

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
offset_left = -61.0
offset_top = -120.0
offset_right = 259.0
offset_bottom = 880.0
texture = ExtResource("1_ne1pe")

[node name="TextureRect_2" type="TextureRect" parent="ParallaxBackground/ParallaxLayer/TextureRect"]
layout_mode = 0
offset_left = 320.0
offset_right = 640.0
offset_bottom = 1000.0
texture = ExtResource("1_ne1pe")

[node name="Terrain" type="Node2D" parent="."]

[node name="TileMapLayer_Background" type="TileMapLayer" parent="Terrain"]
tile_map_data = PackedByteArray("AAAWAP3/AAABAAEAAAAWAP7/AAABAAEAAAAWAP//AAABAAEAAAAWAAAAAAABAAEAAAAWAAEAAAABAAEAAAAWAAIAAAABAAEAAAAWAAMAAAABAAEAAAAWAAQAAAABAAEAAAAWAAUAAAABAAEAAAAWAAYAAAABAAEAAAAWAAcAAAABAAEAAAAWAAgAAAABAAEAAAAXAP3/AAABAAEAAAAXAP7/AAABAAEAAAAXAP//AAABAAEAAAAXAAAAAAABAAEAAAAXAAEAAAABAAEAAAAXAAIAAAABAAEAAAAXAAMAAAABAAEAAAAXAAQAAAABAAEAAAAXAAUAAAABAAEAAAAXAAYAAAABAAEAAAAXAAcAAAABAAEAAAAXAAgAAAABAAEAAAAYAP3/AAABAAEAAAAYAP7/AAABAAEAAAAYAP//AAABAAEAAAAYAAAAAAABAAEAAAAYAAEAAAABAAEAAAAYAAIAAAABAAEAAAAYAAMAAAACAAEAAAAYAAQAAAABAAEAAAAYAAUAAAABAAEAAAAYAAYAAAABAAEAAAAYAAcAAAABAAEAAAAYAAgAAAABAAEAAAAZAP3/AAABAAEAAAAZAP7/AAABAAEAAAAZAP//AAABAAEAAAAZAAAAAAABAAEAAAAZAAEAAAABAAEAAAAZAAIAAAABAAIAAAAZAAUAAAABAAEAAAAZAAYAAAABAAEAAAAZAAcAAAABAAEAAAAZAAgAAAABAAEAAAAaAP3/AAABAAEAAAAaAP7/AAABAAEAAAAaAP//AAABAAEAAAAaAAAAAAABAAEAAAAaAAEAAAABAAEAAAAaAAIAAAABAAIAAAAaAAYAAAABAAEAAAAaAAcAAAABAAEAAAAaAAgAAAABAAEAAAAbAP3/AAABAAEAAAAbAP7/AAABAAEAAAAbAP//AAABAAEAAAAbAAAAAAABAAEAAAAbAAEAAAABAAEAAAAbAAIAAAABAAIAAAAbAAUAAAABAAAAAAAbAAYAAAABAAEAAAAbAAcAAAABAAEAAAAbAAgAAAABAAEAAAAcAP3/AAABAAEAAAAcAP7/AAABAAEAAAAcAP//AAABAAEAAAAcAAAAAAABAAEAAAAcAAEAAAABAAEAAAAcAAIAAAABAAEAAAAcAAMAAAABAAEAAAAcAAQAAAABAAEAAAAcAAUAAAABAAEAAAAcAAYAAAABAAEAAAAcAAcAAAABAAEAAAAcAAgAAAABAAEAAAAdAP3/AAABAAEAAAAdAP7/AAACAAEAAAAdAP//AAACAAEAAAAdAAAAAAABAAEAAAAdAAEAAAABAAEAAAAdAAIAAAABAAEAAAAdAAMAAAABAAEAAAAdAAQAAAABAAEAAAAdAAUAAAABAAEAAAAdAAYAAAABAAEAAAAdAAcAAAABAAEAAAAdAAgAAAABAAEAAAAeAP3/AAABAAEAAAAeAAAAAAABAAAAAAAeAAEAAAABAAEAAAAeAAIAAAABAAEAAAAeAAMAAAABAAEAAAAeAAQAAAABAAEAAAAeAAUAAAABAAEAAAAeAAYAAAABAAEAAAAeAAcAAAABAAEAAAAeAAgAAAABAAEAAAAfAP3/AAABAAEAAAAfAP7/AAAAAAEAAAAfAP//AAAAAAEAAAAfAAAAAAABAAEAAAAfAAEAAAABAAEAAAAfAAIAAAABAAEAAAAfAAMAAAABAAEAAAAfAAQAAAABAAEAAAAfAAUAAAABAAEAAAAfAAYAAAABAAEAAAAfAAcAAAABAAEAAAAfAAgAAAABAAEAAAAgAP3/AAABAAEAAAAgAP7/AAABAAEAAAAgAP//AAABAAEAAAAgAAAAAAACAAEAAAAgAAEAAAACAAEAAAAgAAIAAAABAAEAAAAgAAMAAAABAAEAAAAgAAQAAAABAAEAAAAgAAUAAAABAAEAAAAgAAYAAAABAAEAAAAgAAcAAAABAAEAAAAgAAgAAAABAAEAAAAhAAYAAAABAAEAAAAhAAcAAAABAAEAAAAhAAgAAAABAAEAAAAhAAkAAAABAAEAAAAhAAoAAAABAAEAAAAiAAYAAAABAAEAAAAiAAcAAAABAAEAAAAiAAgAAAABAAEAAAAiAAkAAAABAAEAAAAiAAoAAAABAAEAAAAjAAYAAAABAAEAAAAjAAcAAAABAAEAAAAjAAgAAAABAAEAAAAjAAkAAAABAAEAAAAjAAoAAAABAAEAAAAkAAYAAAABAAEAAAAkAAcAAAABAAEAAAAkAAgAAAABAAEAAAAkAAkAAAABAAEAAAAkAAoAAAABAAEAAAAbAAkAAAABAAEAAAAbAAoAAAABAAEAAAAbAAsAAAABAAEAAAAbAAwAAAABAAEAAAAbAA0AAAABAAEAAAAbAA4AAAABAAEAAAAcAAkAAAABAAEAAAAcAAoAAAABAAEAAAAcAAsAAAABAAEAAAAcAAwAAAABAAEAAAAcAA0AAAABAAEAAAAcAA4AAAABAAEAAAAdAAkAAAABAAEAAAAdAAoAAAABAAEAAAAdAAsAAAABAAEAAAAdAAwAAAABAAEAAAAdAA0AAAABAAEAAAAdAA4AAAABAAEAAAAeAAkAAAABAAEAAAAeAAoAAAABAAEAAAAeAAsAAAABAAEAAAAeAAwAAAABAAEAAAAeAA0AAAABAAEAAAAeAA4AAAABAAEAAAAfAAkAAAABAAEAAAAfAAoAAAABAAEAAAAfAAsAAAABAAEAAAAfAAwAAAABAAEAAAAfAA0AAAABAAEAAAAfAA4AAAABAAEAAAAgAAkAAAABAAEAAAAgAAoAAAABAAEAAAAgAAsAAAABAAEAAAAgAAwAAAABAAEAAAAgAA0AAAABAAEAAAAgAA4AAAABAAEAAAAhAAUAAAABAAEAAAAhAAsAAAABAAEAAAAhAAwAAAABAAEAAAAhAA0AAAABAAEAAAAhAA4AAAABAAEAAAAiAAUAAAABAAEAAAAiAAsAAAABAAEAAAAiAAwAAAABAAEAAAAiAA0AAAABAAEAAAAiAA4AAAABAAEAAAAUAP7/AAABAAEAAAAUAP//AAABAAEAAAAUAAAAAAABAAEAAAAUAAEAAAABAAEAAAAUAAYAAAABAAEAAAAUAAcAAAABAAEAAAAVAP7/AAABAAEAAAAVAP//AAABAAEAAAAVAAAAAAABAAEAAAAVAAEAAAABAAEAAAAVAAIAAAABAAEAAAAVAAMAAAABAAEAAAAVAAQAAAABAAEAAAAVAAUAAAABAAEAAAAVAAYAAAABAAEAAAAVAAcAAAABAAEAAAASAPz/AAABAAEAAAASAP3/AAABAAEAAAASAP7/AAABAAEAAAASAP//AAABAAEAAAASAAAAAAABAAEAAAASAAEAAAAAAAIAAAATAPz/AAABAAEAAAATAP3/AAABAAEAAAATAP7/AAABAAEAAAATAP//AAABAAEAAAATAAAAAAABAAEAAAATAAEAAAABAAEAAAAUAPz/AAABAAEAAAAUAP3/AAABAAEAAAAVAPz/AAABAAEAAAAVAP3/AAABAAEAAAAWAPz/AAABAAEAAAAXAPz/AAABAAEAAAAfAPz/AAABAAEAAAAgAPz/AAABAAEAAAAhAPz/AAABAAEAAAAhAP3/AAABAAEAAAAhAP7/AAABAAEAAAAhAP//AAABAAIAAAAhAAIAAAABAAAAAAAhAAMAAAABAAEAAAAhAAQAAAABAAEAAAAiAPz/AAABAAEAAAAiAP3/AAABAAEAAAAiAP7/AAABAAEAAAAiAP//AAABAAIAAAAiAAIAAAABAAAAAAAiAAMAAAABAAEAAAAiAAQAAAABAAEAAAAjAPz/AAABAAEAAAAjAP3/AAABAAEAAAAjAP7/AAABAAEAAAAjAP//AAABAAEAAAAjAAAAAAAAAAEAAAAjAAEAAAAAAAEAAAAjAAIAAAABAAEAAAAjAAMAAAABAAEAAAAjAAQAAAABAAEAAAAjAAUAAAABAAEAAAAkAPz/AAABAAEAAAAkAP3/AAABAAEAAAAkAP7/AAABAAEAAAAkAP//AAABAAEAAAAkAAAAAAABAAEAAAAkAAEAAAABAAEAAAAkAAIAAAABAAEAAAAkAAMAAAABAAEAAAAkAAQAAAABAAEAAAAkAAUAAAABAAEAAAAlAPz/AAABAAEAAAAlAP3/AAABAAEAAAAlAP7/AAABAAEAAAAlAP//AAABAAEAAAAlAAAAAAABAAEAAAAlAAEAAAABAAEAAAAlAAIAAAABAAEAAAAlAAMAAAABAAEAAAAlAAQAAAABAAEAAAAlAAUAAAABAAEAAAAUAAIAAAABAAEAAAAUAAMAAAAAAAEAAAAUAAQAAAAAAAEAAAAUAAUAAAAAAAEAAAARAPz/AAABAAEAAAATAAIAAAAAAAIAAAARAAAAAAABAAIAAAAQAAAAAAABAAIAAAAQAPz/AAABAAEAAAAQAP3/AAABAAEAAAAQAP7/AAABAAEAAAAQAP//AAABAAEAAAARAP3/AAABAAEAAAARAP7/AAABAAEAAAARAP//AAABAAEAAAAZAAQAAAACAAAAAAAaAAUAAAABAAAAAAA=")
tile_set = SubResource("TileSet_hve3p")

[node name="TileMapLayer" type="TileMapLayer" parent="Terrain"]
tile_map_data = PackedByteArray("AAAEAAAAAAACAAEAAAAEAAEAAAACAAEAAAAEAAIAAAACAAEAAAAEAAMAAAACAAEAAAAEAAQAAAACAAEAAAAEAAUAAAACAAEAAAAEAAYAAAACAAEAAAAEAAcAAAABAAEAAAAFAAgAAAABAAEAAAAGAAgAAAABAAAAAAAHAAgAAAABAAAAAAAIAAgAAAABAAAAAAAJAAgAAAABAAAAAAAKAAgAAAABAAAAAAALAAgAAAABAAAAAAAMAAgAAAABAAAAAAAEAAgAAAABAAEAAAADAAgAAAABAAEAAAADAAcAAAABAAEAAAADAAYAAAABAAEAAAADAAUAAAAAAAEAAAADAAQAAAAAAAEAAAADAAMAAAAAAAEAAAADAAIAAAABAAEAAAADAAEAAAABAAEAAAACAAIAAAABAAIAAAABAAIAAAABAAEAAAAAAAIAAAABAAEAAAAAAAMAAAABAAEAAAAAAAQAAAACAAEAAAAAAAUAAAACAAEAAAABAAYAAAABAAAAAAACAAYAAAABAAAAAAAAAAYAAAABAAEAAAAAAAcAAAABAAEAAAABAAcAAAABAAEAAAACAAcAAAABAAEAAAACAAgAAAABAAEAAAABAAgAAAABAAEAAAD//wcAAAABAAEAAAD//wYAAAABAAEAAAD//wUAAAABAAEAAAD//wQAAAABAAEAAAD//wMAAAABAAEAAAD//wIAAAABAAEAAAD+/wEAAAABAAEAAAD//wEAAAABAAEAAAD//wAAAAABAAEAAAAAAAAAAAABAAEAAAAAAAEAAAABAAEAAAABAAEAAAABAAEAAAACAAEAAAABAAEAAAACAAAAAAABAAEAAAADAAAAAAABAAEAAAABAAAAAAABAAEAAAAEAP//AAACAAAAAAADAP//AAABAAAAAAACAP//AAABAAAAAAABAP//AAABAAAAAAAAAP//AAABAAAAAAANAAgAAAABAAAAAAAOAAgAAAACAAAAAAARAAcAAAAAAAEAAAARAAgAAAAAAAEAAAAQAAkAAAABAAAAAAAPAAkAAAABAAAAAAARAAkAAAABAAEAAAARAAoAAAABAAEAAAAQAAoAAAABAAEAAAAPAAoAAAABAAEAAAAOAAoAAAAAAAEAAAAOAAkAAAABAAEAAAAIAAkAAAABAAEAAAAHAAkAAAABAAIAAAAGAAkAAAABAAEAAAAFAAkAAAABAAEAAAAEAAkAAAABAAEAAAADAAkAAAABAAEAAAACAAkAAAABAAEAAAABAAkAAAABAAEAAAACAAoAAAABAAEAAAADAAoAAAABAAEAAAAEAAoAAAABAAEAAAAFAAoAAAABAAEAAAAGAAoAAAACAAEAAAAIAAoAAAAAAAEAAAABAAoAAAABAAEAAAACAAsAAAABAAEAAAADAAsAAAABAAEAAAAEAAsAAAABAAEAAAAFAAsAAAABAAEAAAAGAAsAAAABAAEAAAAHAAsAAAABAAAAAAAIAAsAAAABAAEAAAAJAAsAAAABAAEAAAAKAAsAAAABAAEAAAALAAsAAAABAAEAAAARAAsAAAABAAEAAAAQAAsAAAABAAEAAAAPAAsAAAABAAEAAAAOAAsAAAABAAEAAAANAAsAAAABAAAAAAAMAAsAAAABAAAAAAABAAsAAAABAAEAAAASAAcAAAABAAEAAAATAAcAAAABAAEAAAAUAAcAAAABAAEAAAAVAAcAAAABAAAAAAAWAAcAAAABAAAAAAAXAAcAAAABAAAAAAAYAAcAAAABAAAAAAAZAAcAAAABAAAAAAAaAAcAAAABAAAAAAASAAgAAAABAAEAAAASAAkAAAABAAEAAAASAAoAAAABAAEAAAATAAgAAAABAAEAAAATAAkAAAABAAEAAAATAAoAAAABAAEAAAATAAsAAAABAAEAAAASAAsAAAABAAEAAAAUAAoAAAABAAEAAAAUAAkAAAABAAEAAAAUAAgAAAABAAEAAAAUAAsAAAABAAEAAAAVAAoAAAABAAEAAAAVAAkAAAABAAEAAAAWAAkAAAABAAEAAAAVAAgAAAABAAEAAAAZAAsAAAABAAEAAAADAAwAAAABAAEAAAADAA0AAAABAAEAAAAEAA4AAAABAAEAAAAFAA4AAAABAAEAAAAGAA4AAAABAAEAAAAHAA4AAAABAAEAAAAIAA4AAAABAAEAAAAJAA4AAAABAAEAAAAKAA4AAAABAAEAAAALAA4AAAABAAEAAAAMAA4AAAABAAEAAAAMAA0AAAABAAEAAAANAA0AAAABAAEAAAADAA4AAAABAAEAAAANAA4AAAABAAEAAAAOAA4AAAABAAEAAAAPAA4AAAABAAEAAAAQAA4AAAABAAEAAAARAA4AAAABAAEAAAASAA4AAAABAAEAAAATAA4AAAABAAEAAAAUAA4AAAABAAEAAAAVAA4AAAABAAEAAAAWAA4AAAABAAEAAAAXAA4AAAABAAEAAAAYAA4AAAABAAEAAAAZAA4AAAABAAEAAAAaAA4AAAABAAEAAAAbAA4AAAABAAEAAAAbAA0AAAABAAEAAAAbAAwAAAABAAEAAAAbAAsAAAABAAEAAAAcAAoAAAACAAEAAAAcAAkAAAACAAEAAAAcAAgAAAACAAEAAAAbAAgAAAABAAEAAAAbAAkAAAABAAEAAAAbAAoAAAABAAEAAAAbAAcAAAABAAEAAAAbAAYAAAAAAAEAAAAbAAUAAAAAAAEAAAAbAAMAAAAAAAEAAAARAA0AAAABAAEAAAARAAwAAAABAAEAAAAQAAwAAAABAAEAAAAPAAwAAAABAAEAAAAOAAwAAAABAAEAAAANAAwAAAABAAEAAAAMAAwAAAABAAEAAAALAAwAAAABAAEAAAAKAAwAAAABAAEAAAAJAAwAAAABAAEAAAAIAAwAAAABAAEAAAAHAAwAAAABAAEAAAAGAAwAAAABAAEAAAAFAAwAAAABAAEAAAAEAAwAAAABAAEAAAAEAA0AAAABAAEAAAAFAA0AAAABAAEAAAAGAA0AAAABAAEAAAAHAA0AAAABAAEAAAAIAA0AAAABAAEAAAAJAA0AAAABAAEAAAAKAA0AAAABAAEAAAALAA0AAAABAAEAAAAOAA0AAAABAAEAAAAPAA0AAAABAAEAAAAQAA0AAAABAAEAAAASAAwAAAABAAEAAAASAA0AAAABAAEAAAATAA0AAAABAAEAAAATAAwAAAABAAEAAAAUAAwAAAABAAEAAAAUAA0AAAABAAEAAAAVAA0AAAABAAEAAAAVAAwAAAABAAEAAAAVAAsAAAABAAEAAAAWAAsAAAABAAEAAAAWAAoAAAABAAEAAAAXAAoAAAABAAEAAAAXAAkAAAABAAEAAAAXAAgAAAABAAEAAAAWAAgAAAABAAEAAAAYAAgAAAABAAEAAAAYAAkAAAABAAEAAAAYAAoAAAABAAEAAAAYAAsAAAABAAEAAAAXAAsAAAABAAEAAAAXAAwAAAABAAEAAAAWAAwAAAABAAEAAAAWAA0AAAABAAEAAAAXAA0AAAABAAEAAAAYAA0AAAABAAEAAAAYAAwAAAABAAEAAAAZAAwAAAABAAEAAAAZAA0AAAABAAEAAAAaAA0AAAABAAEAAAAaAAwAAAABAAEAAAAaAAsAAAABAAEAAAAaAAoAAAABAAEAAAAaAAkAAAABAAEAAAAaAAgAAAABAAEAAAAZAAgAAAABAAEAAAAZAAkAAAABAAEAAAAZAAoAAAABAAEAAAANAAkAAAABAAIAAAAMAAkAAAABAAIAAAALAAkAAAABAAEAAAAKAAkAAAABAAEAAAAJAAkAAAABAAEAAAAJAAoAAAABAAEAAAAKAAoAAAABAAEAAAALAAoAAAACAAEAAAAbAAIAAAAAAAAAAAAcAAIAAAACAAAAAAAcAAMAAAACAAEAAAAcAAQAAAABAAEAAAAdAAQAAAABAAAAAAAeAAQAAAABAAAAAAAfAAQAAAABAAAAAAAgAAQAAAABAAAAAAAhAAQAAAABAAAAAAAiAAQAAAABAAAAAAAjAAQAAAABAAAAAAAdAAUAAAABAAEAAAAeAAUAAAABAAIAAAAfAAUAAAABAAIAAAAgAAUAAAABAAIAAAAhAAUAAAABAAIAAAAiAAUAAAABAAIAAAAjAAUAAAABAAIAAAAcAAUAAAABAAEAAAAcAAYAAAABAAEAAAAcAAcAAAACAAEAAAAdAAYAAAABAAIAAAAXAAIAAAACAAIAAAAXAAEAAAACAAEAAAAXAAAAAAACAAEAAAAXAP//AAACAAEAAAAYAP7/AAABAAIAAAAZAP7/AAABAAIAAAAaAP7/AAABAAIAAAAbAP7/AAABAAIAAAAcAP7/AAABAAIAAAAdAP7/AAABAAIAAAAeAP7/AAABAAIAAAAfAP7/AAABAAIAAAAgAP7/AAABAAIAAAAWAAIAAAAAAAIAAAAWAAEAAAAAAAEAAAAWAAAAAAAAAAEAAAAWAP//AAABAAEAAAAWAP7/AAABAAEAAAAWAP3/AAABAAEAAAAWAPz/AAABAAEAAAAWAPv/AAABAAEAAAAVAP//AAAAAAIAAAAVAP7/AAABAAEAAAAUAP7/AAAAAAIAAAAUAP3/AAAAAAEAAAAUAPz/AAABAAEAAAATAPz/AAAAAAIAAAATAPv/AAABAAEAAAAUAPv/AAABAAEAAAATAPr/AAABAAEAAAATAPn/AAABAAEAAAAUAPn/AAABAAEAAAAUAPj/AAABAAEAAAATAPj/AAABAAEAAAAVAPj/AAABAAEAAAAWAPj/AAABAAEAAAAXAPj/AAABAAEAAAAYAPj/AAABAAEAAAAZAPj/AAABAAEAAAAaAPj/AAABAAEAAAAbAPj/AAABAAEAAAAcAPj/AAABAAEAAAAdAPj/AAABAAEAAAAeAPj/AAABAAEAAAAfAPf/AAABAAEAAAAgAPf/AAABAAEAAAAhAPf/AAABAAEAAAAiAPf/AAABAAEAAAAjAPf/AAABAAEAAAAjAPj/AAABAAEAAAAiAPj/AAABAAEAAAAhAPj/AAABAAEAAAAgAPj/AAABAAEAAAAfAPj/AAABAAEAAAAhAPn/AAABAAEAAAAhAPr/AAABAAEAAAAhAPv/AAABAAEAAAAhAPz/AAABAAEAAAAiAPz/AAABAAEAAAAiAP3/AAABAAEAAAAiAPv/AAABAAEAAAAiAPr/AAABAAEAAAAiAPn/AAABAAEAAAAjAPn/AAABAAEAAAAjAPr/AAABAAEAAAAjAPv/AAABAAEAAAAjAPz/AAABAAEAAAAjAP3/AAABAAEAAAAhAP3/AAABAAEAAAAgAP3/AAABAAEAAAAbAPv/AAABAAEAAAAbAPr/AAABAAEAAAAbAPn/AAABAAEAAAAaAPn/AAABAAEAAAAZAPn/AAABAAEAAAAYAPn/AAABAAEAAAAXAPn/AAABAAEAAAAWAPn/AAABAAEAAAAVAPn/AAABAAEAAAAVAPr/AAABAAEAAAAUAPr/AAABAAEAAAAVAPv/AAABAAEAAAAVAPz/AAABAAEAAAAVAP3/AAABAAEAAAAWAPr/AAABAAEAAAAXAPr/AAABAAEAAAAXAPv/AAABAAEAAAAXAPz/AAABAAEAAAAXAP3/AAABAAEAAAAXAP7/AAABAAEAAAAYAP3/AAABAAEAAAAYAPz/AAABAAEAAAAYAPv/AAABAAEAAAAYAPr/AAABAAEAAAAZAPr/AAABAAEAAAAZAPv/AAABAAEAAAAZAPz/AAABAAEAAAAZAP3/AAABAAEAAAAaAP3/AAABAAEAAAAaAPz/AAABAAEAAAAaAPv/AAABAAEAAAAaAPr/AAABAAEAAAAbAPz/AAABAAEAAAAbAP3/AAABAAEAAAAcAP3/AAABAAEAAAAcAPz/AAABAAEAAAAcAPv/AAABAAEAAAAcAPr/AAABAAEAAAAcAPn/AAABAAEAAAAdAPn/AAABAAEAAAAdAPr/AAABAAEAAAAdAPv/AAABAAEAAAAdAPz/AAABAAEAAAAdAP3/AAABAAEAAAAeAP3/AAABAAEAAAAeAPz/AAABAAEAAAAeAPv/AAABAAEAAAAeAPr/AAABAAEAAAAeAPn/AAABAAEAAAAfAPn/AAABAAEAAAAfAPr/AAABAAEAAAAfAPv/AAABAAEAAAAfAPz/AAABAAEAAAAfAP3/AAABAAEAAAAgAPz/AAABAAEAAAAgAPv/AAABAAEAAAAgAPr/AAABAAEAAAAgAPn/AAABAAEAAAAQAAEAAAACAAIAAAAQAAAAAAACAAEAAAAQAP//AAACAAEAAAAQAP7/AAACAAEAAAAQAP3/AAACAAEAAAAQAPz/AAABAAEAAAAQAPv/AAABAAEAAAARAPz/AAACAAIAAAASAPv/AAABAAIAAAARAPv/AAABAAEAAAARAPr/AAABAAEAAAASAPr/AAABAAEAAAAQAPr/AAABAAEAAAAPAPv/AAABAAEAAAAPAPz/AAABAAEAAAAPAPr/AAABAAEAAAAPAP3/AAABAAEAAAAPAAEAAAAAAAEAAAAPAAAAAAAAAAEAAAAPAP//AAAAAAEAAAAPAP7/AAABAAEAAAAOAP7/AAAAAAIAAAAOAP3/AAAAAAEAAAAOAPz/AAAAAAEAAAAOAPv/AAAAAAEAAAAOAPr/AAAAAAEAAAAOAPn/AAAAAAEAAAAPAPn/AAABAAEAAAAQAPn/AAABAAEAAAARAPn/AAABAAEAAAASAPn/AAABAAEAAAASAPj/AAABAAEAAAARAPj/AAABAAEAAAAQAPj/AAABAAEAAAAPAPj/AAABAAEAAAAOAPj/AAAAAAEAAAAPAAIAAAAAAAIAAAABAAMAAAACAAIAAAD7/wgAAAABAAEAAAD7/wkAAAABAAEAAAD7/woAAAABAAEAAAD7/wsAAAABAAEAAAD7/wwAAAABAAEAAAD7/w0AAAABAAEAAAD7/w4AAAABAAEAAAD8/wgAAAABAAEAAAD8/wkAAAABAAEAAAD8/woAAAABAAEAAAD8/wsAAAABAAEAAAD8/wwAAAABAAEAAAD8/w0AAAABAAEAAAD8/w4AAAABAAEAAAD9/wgAAAABAAEAAAD9/wkAAAABAAEAAAD9/woAAAABAAEAAAD9/wsAAAABAAEAAAD9/wwAAAABAAEAAAD9/w0AAAABAAEAAAD9/w4AAAABAAEAAAD+/wgAAAABAAEAAAD+/wkAAAABAAEAAAD+/woAAAABAAEAAAD+/wsAAAABAAEAAAD+/wwAAAABAAEAAAD+/w0AAAABAAEAAAD+/w4AAAABAAEAAAD//wgAAAABAAEAAAD//wkAAAABAAEAAAD//woAAAABAAEAAAD//wsAAAABAAEAAAD//wwAAAABAAEAAAD//w0AAAABAAEAAAD//w4AAAABAAEAAAAAAAgAAAABAAEAAAAAAAkAAAABAAEAAAAAAAoAAAABAAEAAAAAAAsAAAABAAEAAAAAAAwAAAABAAEAAAAAAA0AAAABAAEAAAAAAA4AAAABAAEAAAABAAwAAAABAAEAAAABAA0AAAABAAEAAAABAA4AAAABAAEAAAACAAwAAAABAAEAAAACAA0AAAABAAEAAAACAA4AAAABAAEAAAD4//z/AAABAAAAAAD4//3/AAABAAIAAAD4//7/AAADAAIAAAD4////AAAAAAAAAAD4/wAAAAABAAEAAAD4/wEAAAABAAEAAAD4/wIAAAABAAEAAAD4/wMAAAABAAEAAAD4/wQAAAABAAEAAAD4/wUAAAABAAEAAAD4/wYAAAABAAEAAAD4/wcAAAABAAEAAAD4/wgAAAABAAEAAAD4/wkAAAABAAEAAAD4/woAAAABAAEAAAD4/wsAAAABAAEAAAD4/wwAAAABAAEAAAD4/w0AAAABAAEAAAD4/w4AAAABAAEAAAD5//z/AAABAAAAAAD5//3/AAABAAEAAAD5//7/AAAAAAEAAAD5////AAABAAEAAAD5/wAAAAABAAEAAAD5/wEAAAABAAEAAAD5/wIAAAABAAEAAAD5/wMAAAABAAEAAAD5/wQAAAABAAEAAAD5/wUAAAABAAEAAAD5/wYAAAABAAEAAAD5/wcAAAABAAEAAAD5/wgAAAABAAEAAAD5/wkAAAABAAEAAAD5/woAAAABAAEAAAD5/wsAAAABAAEAAAD5/wwAAAABAAEAAAD5/w0AAAABAAEAAAD5/w4AAAABAAEAAAD6//z/AAABAAAAAAD6//3/AAABAAEAAAD6//7/AAABAAEAAAD6////AAABAAEAAAD6/wAAAAABAAEAAAD6/wEAAAABAAEAAAD6/wIAAAABAAEAAAD6/wMAAAABAAEAAAD6/wQAAAABAAEAAAD6/wUAAAABAAEAAAD6/wYAAAABAAEAAAD6/wcAAAABAAEAAAD6/wgAAAABAAEAAAD6/wkAAAABAAEAAAD6/woAAAABAAEAAAD6/wsAAAABAAEAAAD6/wwAAAABAAEAAAD6/w0AAAABAAEAAAD6/w4AAAABAAEAAAD7//z/AAABAAAAAAD7//3/AAABAAEAAAD7//7/AAABAAEAAAD7////AAABAAEAAAD7/wAAAAABAAEAAAD7/wEAAAABAAEAAAD7/wIAAAABAAEAAAD7/wMAAAABAAEAAAD7/wQAAAABAAEAAAD7/wUAAAABAAEAAAD7/wYAAAABAAEAAAD7/wcAAAABAAEAAAD8//z/AAABAAAAAAD8//3/AAABAAEAAAD8//7/AAABAAEAAAD8////AAABAAEAAAD8/wAAAAABAAEAAAD8/wEAAAABAAEAAAD8/wIAAAABAAEAAAD8/wMAAAABAAEAAAD8/wQAAAABAAEAAAD8/wUAAAABAAEAAAD8/wYAAAABAAEAAAD8/wcAAAABAAEAAAD9//z/AAABAAAAAAD9//3/AAABAAEAAAD9//7/AAABAAEAAAD9////AAABAAEAAAD9/wAAAAABAAEAAAD9/wEAAAABAAEAAAD9/wIAAAABAAEAAAD9/wMAAAABAAEAAAD9/wQAAAABAAEAAAD9/wUAAAABAAEAAAD9/wYAAAABAAEAAAD9/wcAAAABAAEAAAD+//3/AAACAAEAAAD+//7/AAACAAEAAAD+////AAABAAEAAAD+/wAAAAABAAEAAAD+/wIAAAABAAEAAAD+/wMAAAABAAEAAAD+/wQAAAABAAEAAAD+/wUAAAABAAEAAAD+/wYAAAABAAEAAAD+/wcAAAABAAEAAAD/////AAABAAAAAAAFAAcAAAACAAAAAAARAAYAAAAAAAAAAAASAAYAAAABAAAAAAATAAYAAAABAAAAAAAUAAYAAAACAAAAAAAKAAcAAAAEAAAAAAALAAYAAAAEAAEAAAALAAcAAAAEAAIAAAAOAAcAAAADAAEAAAANAAcAAAADAAEAAAAFAAYAAAADAAEAAAAIAAcAAAAEAAEAAAAHAAcAAAADAAEAAAASAAUAAAADAAEAAAAUAAUAAAADAAIAAAAXAAYAAAAEAAIAAAAXAAUAAAAEAAEAAAAYAAYAAAADAAIAAAAbAAEAAAADAAEAAAAcAAEAAAAEAAAAAAAbAAQAAAAAAAEAAAD+//z/AAACAAAAAAD3//z/AAABAAAAAAD2//z/AAABAAAAAAD1//z/AAABAAAAAAD3//3/AAABAAIAAAD2//3/AAABAAIAAAD1//3/AAABAAIAAAD0/wAAAAABAAAAAAD0/wEAAAABAAEAAAD1/wEAAAABAAEAAAD2/wEAAAABAAEAAAD2/wAAAAABAAAAAAD1/wAAAAABAAAAAAD3/wEAAAABAAEAAAD3/wAAAAABAAAAAAD3/wIAAAABAAEAAAD3/wMAAAABAAEAAAD3/wQAAAABAAEAAAD2/wQAAAABAAEAAAD2/wMAAAABAAEAAAD2/wIAAAABAAEAAAD1/wMAAAABAAEAAAD1/wIAAAABAAEAAAD1/wQAAAABAAEAAAD0/wQAAAABAAEAAAD0/wMAAAABAAEAAAD0/wIAAAABAAEAAAD0//3/AAABAAIAAAD0//z/AAABAAAAAAD3////AAADAAAAAAD2////AAADAAAAAAD1////AAADAAAAAAD0////AAADAAAAAAAOAPf/AAAAAAEAAAAPAPf/AAABAAEAAAAQAPf/AAABAAEAAAARAPf/AAABAAEAAAASAPf/AAABAAEAAAATAPf/AAABAAEAAAAUAPf/AAABAAEAAAAVAPf/AAABAAEAAAAWAPf/AAABAAEAAAAXAPf/AAABAAEAAAAYAPf/AAABAAEAAAAZAPf/AAABAAEAAAAaAPf/AAABAAEAAAAbAPf/AAABAAEAAAAcAPf/AAABAAEAAAAdAPf/AAABAAEAAAAeAPf/AAABAAEAAAD0/wUAAAABAAEAAAD0/wYAAAABAAEAAAD0/wcAAAABAAEAAAD0/wgAAAABAAEAAAD0/wkAAAABAAEAAAD0/woAAAABAAEAAAD0/wsAAAABAAEAAAD0/wwAAAABAAEAAAD0/w0AAAABAAEAAAD0/w4AAAABAAEAAAD1/wUAAAABAAEAAAD1/wYAAAABAAEAAAD1/wcAAAABAAEAAAD1/wgAAAABAAEAAAD1/wkAAAABAAEAAAD1/woAAAABAAEAAAD1/wsAAAABAAEAAAD1/wwAAAABAAEAAAD1/w0AAAABAAEAAAD1/w4AAAABAAEAAAD2/wUAAAABAAEAAAD2/wYAAAABAAEAAAD2/wcAAAABAAEAAAD2/wgAAAABAAEAAAD2/wkAAAABAAEAAAD2/woAAAABAAEAAAD2/wsAAAABAAEAAAD2/wwAAAABAAEAAAD2/w0AAAABAAEAAAD2/w4AAAABAAEAAAD3/wUAAAABAAEAAAD3/wYAAAABAAEAAAD3/wcAAAABAAEAAAD3/wgAAAABAAEAAAD3/wkAAAABAAEAAAD3/woAAAABAAEAAAD3/wsAAAABAAEAAAD3/wwAAAABAAEAAAD3/w0AAAABAAEAAAD3/w4AAAABAAEAAAA=")
tile_set = SubResource("TileSet_eow3j")

[node name="StaticBody2D" parent="Terrain" instance=ExtResource("4_5ggtx")]
position = Vector2(147, -79)

[node name="StaticBody2D_2" parent="Terrain" instance=ExtResource("4_5ggtx")]
position = Vector2(34, -79)

[node name="Character" parent="." instance=ExtResource("5_bgypc")]
position = Vector2(356, 84)

[node name="Tutorial" type="Node2D" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("6_jgi5q")
player = NodePath("../Character")

[node name="MovementHelp" type="Label" parent="Tutorial"]
unique_name_in_owner = true
visible = false
offset_left = 113.0
offset_top = 66.0
offset_right = 165.0
offset_bottom = 80.0
text = "◀ or ▶"
label_settings = SubResource("LabelSettings_eow3j")

[node name="JumpTrigger" type="Area2D" parent="Tutorial"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial/JumpTrigger"]
position = Vector2(256.5, 139)
shape = SubResource("RectangleShape2D_ryrav")
debug_color = Color(0.514344, 0.576553, 7.70092e-07, 0.42)

[node name="FloatTrigger" type="Area2D" parent="Tutorial"]
position = Vector2(153, -41)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial/FloatTrigger"]
position = Vector2(257, 92)
shape = SubResource("RectangleShape2D_eow3j")
debug_color = Color(0.514344, 0.576553, 7.70092e-07, 0.42)

[node name="FloatTrigger_End" type="Area2D" parent="Tutorial"]
position = Vector2(153, -41)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial/FloatTrigger_End"]
position = Vector2(290, 45)
shape = SubResource("RectangleShape2D_eow3j")
debug_color = Color(0.514344, 0.576553, 7.70092e-07, 0.42)

[node name="JumpHelp" type="Label" parent="Tutorial"]
unique_name_in_owner = true
visible = false
offset_left = 226.0
offset_top = 65.0
offset_right = 298.0
offset_bottom = 75.0
text = "X to jump"
label_settings = SubResource("LabelSettings_eow3j")

[node name="FloatHelp" type="Label" parent="Tutorial"]
unique_name_in_owner = true
visible = false
offset_left = 423.0
offset_top = 2.0
offset_right = 492.0
offset_bottom = 12.0
text = "double x"
label_settings = SubResource("LabelSettings_eow3j")

[node name="Crab_2" parent="." instance=ExtResource("8_48p0x")]
position = Vector2(546, 56)

[connection signal="body_entered" from="Tutorial/JumpTrigger" to="Tutorial" method="_on_jump_trigger_body_entered"]
[connection signal="body_entered" from="Tutorial/FloatTrigger" to="Tutorial" method="_on_float_trigger_body_entered"]
[connection signal="body_entered" from="Tutorial/FloatTrigger_End" to="Tutorial" method="_on_float_trigger_end_body_entered"]
